Multiple Changes - Added activation event for files with ".log" extension - Added files.associations and languages for .log

--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
 	"categories": [
 		"Other"
 	],
+	"files.associations": {
+        "*.log": "log"
+    },
+	"languages": [{
+        "id": "log",
+        "extensions": [ ".log" ]
+    }],
 	"activationEvents": [
-		"onCommand:extension.showTriggerWords"
+		"onCommand:extension.showTriggerWords",
+		"onLanguage:log"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
