--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "vsce-show-triggerwords",
 	"displayName": "Show Trigger Words",
 	"description": "Emphasize trigger words in files",
-	"version": "0.1.2",
-	"publisher": "Matthew Pearon",
+	"version": "0.1.3",
+	"publisher": "MPearon",
 	"keywords": ["mpearon","trigger","words","format","log"],
 	"author": {
 		"name": "Matthew Pearon",
