--- a/.github/workflows/deployVsCodeExtension.yml
+++ b/.github/workflows/deployVsCodeExtension.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install
+      - uses: phips28/gh-action-bump-version@v11.0.0
+        with:
+          skip-tag:  'true'
+        env:
+          GITHUB_USER: "Matthew Pearon"
+          GITHUB_EMAIL: "mpearon@users.noreply.github.com"
       - uses: lannonbr/vsce-action@master
         with:
           args: "publish -p $VSCE_TOKEN"
